--- a/docs/TODO
+++ b/docs/TODO
@@ -8,3 +8,5 @@
  - Rewrite BSD bind payload (SIGSYS error after listen call) [LSD one is also broken]
 
  - Determine WTF Advanced options are supposed to do and how they should be set
+
+ - Fix AutoOpts, how to handle?  Possible when we are going to use a exploit, for example to check or exploit, call a function like Init, and this could process AutoOpts, and SetTempEnv for all of its key/val pairs...
