--- a/docs/TODO
+++ b/docs/TODO
@@ -40,6 +40,8 @@ Things that can wait
 
 - Right now LoadTempEnv, will set the TempEnv to the actual stored hash, so you are modifing the stored hash also, this is nice because you don't have to SaveTempEnv before you do a save, but it isn't really intended behavior.  Load should "load" a copy, you should be able to make changes and ditch it without affecting the saved copy.  Maybe this should be changed, and LoadTempEnv should create a copy like SaveTempEnv does.
 
+- We should push everything to a sub usage, for example exploit Size, in some code we do like $exploit->{'Info'}->{'Payload'}->{'Size'} or $exploit->Info->{'Payload'}->Size, etc etc, we should just do $exploit->Size, this allows overloading by the exploit to calculate Size on the fly (maybe affected by some env parameters?, etc.)
+
 Things that can wait a while, or never get done
 ===============================================
 
