--- a/docs/TODO
+++ b/docs/TODO
@@ -1,33 +1,26 @@
-Its about time to get this motha released, seperate this file into two sections,
-Things that should be done before this release, and things that can wait.
+Pre-Release Tasks
+==================
 
-(I just moved my stuff, you move your stuff).
+ - Fix AutoOpts, how to handle?  Possible when we are going to use a exploit, for example to check or
+   exploit, call a function like Init, and this could process AutoOpts, and SetTempEnv for all of its 
+   key/val pairs...
 
-Things that MUST be done
-========================
+ - Write a quickstart users guide, enough to get them up and running in a few paragraphs. (I'll do this).
 
- - Fix AutoOpts, how to handle?  Possible when we are going to use a exploit, for example to check or exploit, call a function like Init, and this could process AutoOpts, and SetTempEnv for all of its key/val pairs...
+ - Get some basic developer docs?, although the bulk of this can wait a week or two.
 
-- Write a quickstart users guide, enough to get them up and running in a few
-  paragraphs. (I'll do this).
+ - Fixed the PoPToP exploit to use hardcoded strings, and remove all my random pptp protocol stuff.
 
-- Get some basic developer docs?, although the bulk of this can wait a week or
-  two.
+ - Get a logo in ascii art form for msfcli and msfconsole. Embed logo into msfweb.
 
-- Fixed the PoPToP exploit to use hardcoded strings, and remove all my random
-  pptp protocol stuff.
+ - Configure mailing list, public CVS, bugzilla, etc. Currently waiting on Savannah approval
 
-- Get a logo in ascii art form for msfcli and msfconsole and probably msfweb
-  (imgs would be harder in msfweb right?).
 
-- A mailing list is a must, a must! msf@metasploit.com?
-  framework@metasploit.com?
+Post-Release Tasks
+===================
 
-Things that can wait
-====================
-
- - Get the Encoder/Nop routines fixed so they will follow a specified
-   precedence, and then fall through all the other ones on failure.
+ - Get the Encoder/Nop routines fixed so they will follow a specified precedence, and then fall through all the
+   other ones on failure.
 
  - Finish rewriting the configuration and logging system in msfconsole
 
@@ -35,14 +28,18 @@ Things that can wait
  
  - Rewrite BSD bind payload (SIGSYS error after listen call) [LSD one is also broken]
 
- - Determine WTF Advanced options are supposed to do and how they should be set
-(can this be removed?)
+ - Right now LoadTempEnv, will set the TempEnv to the actual stored hash, so you are modifing the stored hash also,
+   this is nice because you don't have to SaveTempEnv before you do a save, but it isn't really intended behavior.
+   Load should "load" a copy, you should be able to make changes and ditch it without affecting the saved copy.  
+   Maybe this should be changed, and LoadTempEnv should create a copy like SaveTempEnv does.
 
-- Right now LoadTempEnv, will set the TempEnv to the actual stored hash, so you are modifing the stored hash also, this is nice because you don't have to SaveTempEnv before you do a save, but it isn't really intended behavior.  Load should "load" a copy, you should be able to make changes and ditch it without affecting the saved copy.  Maybe this should be changed, and LoadTempEnv should create a copy like SaveTempEnv does.
+ - We should push everything to a sub usage, for example exploit Size, in some code we do like 
+   $exploit->{'Info'}->{'Payload'}->{'Size'} or $exploit->Info->{'Payload'}->Size, etc etc, we should just do 
+   $exploit->Size, this allows overloading by the exploit to calculate Size on the fly (maybe affected by some 
+   env parameters?, etc.)
 
-- We should push everything to a sub usage, for example exploit Size, in some code we do like $exploit->{'Info'}->{'Payload'}->{'Size'} or $exploit->Info->{'Payload'}->Size, etc etc, we should just do $exploit->Size, this allows overloading by the exploit to calculate Size on the fly (maybe affected by some env parameters?, etc.)
 
-Things that can wait a while, or never get done
-===============================================
+Far Future
+===========
 
-- Template system for msfweb, skinz baby
+- Complete template/skins/css system for msfweb
