Minor changes to comments

--- a/docs/TODO
+++ b/docs/TODO
@@ -1,6 +1,7 @@
 Problems
 ========
-There is now Msf::Socket which will do great things, but MSSQL, etc, is using Pex::Socket, and we want those classes to be able to stand alone.... Pass in the socket to MSSQL instead of creating it there?
+ - There is now Msf::Socket which will do great things, but MSSQL, etc, is using Pex::Socket, and we want those classes to be able to stand alone.... Pass in the socket to MSSQL instead of creating it there?
+   ^^^ - Pex needs to be standalone, either I add MSf::Socket functionality to Pex, or it stays as it is, I think passing a socket handler will make it a PITA to use
 
 Pre-Release Tasks
 ==================
