--- a/README
+++ b/README
@@ -3,6 +3,14 @@ Hey!
 
 You have a beta copy of the Metasploit Exploit Framework.
 
+Please, give us feedback, questions, comments, thoughts, ideas.
+
+Send mail to framework@metasploit.com, that will come to both of us.
+
+Our indiviual email address:
+H D Mooore <hdm [at] metasploit.com>
+spoonm <ninjatools [at] hush.com>
+
 Some notes about the framework.
 
 - Read docs/QUICKSTART.tabcompletion, this will make using msfconsole so much
