--- a/README
+++ b/README
@@ -8,8 +8,8 @@ Please, give us feedback, questions, comments, thoughts, ideas.
 Send mail to framework@metasploit.com, that will come to both of us.
 
 Our indiviual email address:
-H D Mooore <hdm [at] metasploit.com>
-spoonm <ninjatools [at] hush.com>
+  H D Moore <hdm [at] metasploit.com>
+  spoonm <ninjatools [at] hush.com>
 
 Some notes about the framework.
 
