--- a/docs/TODO
+++ b/docs/TODO
@@ -4,9 +4,9 @@ Pre-Release Tasks
 
  - Fix msfconsole so that ^C during Exploit with unhandled payload does not kill interface
 
- - The winadduser payload seems to be completely hosed, need to debug it
+ - The winadduser payload needs to be rewritten using new api
 
- - The winreverse payload does not seem to be setting EXITFUNC correctly
+ - The EXITFUNC routine is unable to set SEH correctly, maybe remove?
 
  - Determine the issue with the PREFORK code, it DOES work on some exploits
  
