Added note about multiple Check return vals

--- a/docs/TODO
+++ b/docs/TODO
@@ -1,6 +1,8 @@
 Pre-Release Tasks
 ==================
 
+ - Multiple return values of Check, not just 0/1, we need 0 for plain not vuln, 1 for looks vuln, 2 for confirmed, -1 for cant exploit, -2 for cant tell
+
  - Make the OS explicit. Remove win32, make it win2000, winxp, etc, etc for exploits and payloads
 
  - Fix msfconsole so that ^C during Exploit with unhandled payload does not kill interface
