--- a/docs/TODO
+++ b/docs/TODO
@@ -1,6 +1,10 @@
 Pre-Release Tasks
 ==================
 
+ - Finish writing msfencode 
+ 
+ - Finish writing and testing new handler system
+ 
  - The msfweb interface does not work correctly on Mac OS X
 
  - Change the add bl calls to add ebx in Encoder... lots of these
@@ -22,10 +26,8 @@ Pre-Release Tasks
  - Find a host for the mailing list, public CVS, bugzilla, etc. 
  
  - Add documentation describing how the shared config file relates to msfcli and msfconsole
-
- - Change the ExternalPayload module so that it does safe argument handling
  
- - Remove any exploits which are just plain broken
+ X Remove any exploits which are just plain broken - maybe Exchange?
  
  - The Pex library needs documentation and API guides for standalone use 
  
